# openmht

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
cmake/Modules/: Findopenmht.cmake  openmht.pc.in
share/: CMakeLists.txt
share/image-tracking/: CMakeLists.txt  main.cpp
share/multi-track-example/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Ellipse.h  Entity.cpp  Entity.h  Measurement.cpp  Measurement.h
src/filter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  ParticleFilter.cpp  ParticleFilter.h  PositionTracker.cpp  PositionTracker.h
src/multi/: CMakeLists.txt  MHT.cpp  MHT.h
src/plot/: CMakeLists.txt  Plot.cpp  Plot.h  gnuplot-iostream.h
src/sim/: CMakeLists.txt  Dynamics.cpp  Dynamics.h
